Add logo and buttons, edit css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <body>
         <img id="google-logo" src="google.png" alt="Google Logo">
 
+        <div id="search-div">
+            <form action="#" method="GET">
+                <input id="search-box" type="search" name="search">
+                <input id="search-button" type="submit" name="search" value="Search on Google">
+                <input id="lucky-button" type="submit" name="search" value="I'm feelin' lucky">
+            </form>
+        </div>
     </body>
 
 </html>
