Add navbar, edit alignments

--- a/index.html
+++ b/index.html
@@ -6,15 +6,24 @@
     </head>
 
     <body>
-        <img id="google-logo" src="google.png" alt="Google Logo">
+        <div id="nav">
+            <a href="#">Gmail</a>
+            <a href="#">Images</a>
+        </div>
+
+        <div id="logo-div">
+            <img id="google-logo" src="google.png" alt="Google Logo">
+        </div>
 
         <div id="search-div">
             <form action="#" method="GET">
-                <input id="search-box" type="search" name="search">
+                <input id="search-box" type="search" name="search"><br>
                 <input id="search-button" type="submit" name="search" value="Search on Google">
                 <input id="lucky-button" type="submit" name="search" value="I'm feelin' lucky">
             </form>
         </div>
+    
+    
     </body>
 
 </html>
