Arrange CSS, remove test borders

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="nav">
             <a href="#">Gmail</a>
             <a href="#">Images</a>
-            <button class="signin">Sign In</button>
+            <button class="signin">Sign in</button>
         </div>
 
         <div id="logo-div">
