--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Google homepage miniproject for the Odin Project by JamCry -->
 <html>
     <head>
         <title>Google Homepage Project</title>
@@ -21,7 +22,6 @@
                 <input id="search-box" type="search" name="search"><br>
                 <div class="buttons">
                     <input id="search-button" type="submit" name="search" value="Google Search">
-                    * *
                     <input id="lucky-button" type="submit" name="search" value="I'm Feeling Lucky">
                 </div>
                 <div class="center-p">
